--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -3,26 +3,33 @@
 
 <app-carousel-banner></app-carousel-banner>
 <!-- Contenido principal -->
-<main class="container mx-auto py-12 flex flex-col lg:flex-row">
+<main class="container mx-auto py-16 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
-  <div class="w-full lg:w-3/4 pr8 p-8">
-    <h1 class="text-3xl font-bold mb-5">Nuestro Equipo</h1>
+  <div class="w-full lg:w-3/4 pr-8 p-8">
+    <h1 class="text-4xl font-extrabold mb-8 text-gray-800">Conoce a Nuestro Equipo</h1>
     <!-- Espacio para contenido dinámico -->
-    <section id="our-team" class="">
+    <section id="our-team">
       <div class="container mx-auto px-4">
-        <div
-          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-8"
-        >
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
           @for (item of equipo; track $index) {
-          <div class="bg-white p-6 my-6 text-center">
-            <img
-              src="{{ item.imagen }}"
-              loading="lazy"
-              alt="Nombre 1 Apellido"
-              class="rounded-full mb-4"
-            />
-            <h3 class="text-xl font-semibold mb-2">{{ item.nombre }}</h3>
-            <p class="text-gray-700">{{ item.cargo }}</p>
+          <div class="transform hover:-translate-y-1 transition-transform duration-300 ease-in-out">
+            <div class="bg-white border-2 border-gray-100 hover:border-[rgb(234,179,8)] transition-colors duration-300">
+              <div class="flex flex-row h-full">
+                <div class="w-1/3 relative">
+                  <img
+                    src="{{ item.imagen }}"
+                    loading="lazy"
+                    alt="{{ item.nombre }}"
+                    class="w-full h-full object-cover"
+                  />
+                  <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-[rgb(234,179,8)] to-transparent opacity-30"></div>
+                </div>
+                <div class="w-2/3 p-8 flex flex-col justify-center border-l-2 border-gray-100">
+                  <h3 class="text-xl font-bold mb-3 text-gray-800">{{ item.nombre }}</h3>
+                  <p class="text-gray-600 font-medium">{{ item.cargo }}</p>
+                </div>
+              </div>
+            </div>
           </div>
           }
         </div>
