Add images to various components and update team member details

--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -13,7 +13,11 @@
         Transformación digital y manufactura avanzada: Un análisis del ecosistema regional
       </p>
     </header>
-
+<img
+    src="assets/informe1.jpg"
+    alt="Desafíos y Brechas img Descripción"
+  
+  />
     <!-- Secciones con nuevo diseño -->
     <section class="space-y-16">
       <!-- Introducción -->
@@ -76,6 +80,12 @@
           oxigenación en la acuicultura.
         </p>
       </div>
+
+      <img
+    src="assets/informe2.jpg"
+    alt="Desafíos y Brechas img Descripción"
+  
+  />
 
       <!-- Sección: Fuente de Información -->
       <div class="hover:bg-gray-50 transition-colors duration-300 p-8">
