--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -16,6 +16,8 @@
       </p>
     </header>
 
+
+
     <!-- Secciones con diseño minimalista -->
     <section class="bg-white p-12 border-l-4 border-blue-600 hover:border-l-8 transition-all">
       <h2 class="text-3xl font-bold text-gray-900 mb-6">
@@ -28,7 +30,14 @@
         experiencia de aprendizaje inmersiva, donde conceptos complejos se transforman en 
         conocimiento accesible y aplicable.
       </p>
+      
     </section>
+
+    <img
+    src="assets/podcast1.jpg"
+    alt="Desafíos y Brechas img Descripción"
+  
+  />
 
     <section class="bg-white p-12 border-l-4 border-blue-600 hover:border-l-8 transition-all">
       <h2 class="text-3xl font-bold text-gray-900 mb-6">
@@ -43,6 +52,12 @@
       </p>
     </section>
 
+    <img
+    src="assets/podcast2.jpg"
+    alt="Desafíos y Brechas img Descripción"
+  
+  />
+
     <section class="bg-white p-12 border-l-4 border-blue-600 hover:border-l-8 transition-all">
       <h2 class="text-3xl font-bold text-gray-900 mb-6">
         Metodología de Vanguardia
@@ -55,6 +70,8 @@
         de experiencia.
       </p>
     </section>
+
+    
 
     <!-- Reproductor de video modernizado -->
     <section class="bg-white p-12">
