--- a/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
+++ b/src/app/v2/modules/proyecto-plataforma/proyecto-plataforma.component.html
@@ -7,14 +7,18 @@
   <div class="lg:col-span-3">
     <!-- Encabezado principal -->
     <h1 class="text-4xl font-bold mb-12 border-b-2 border-amber-500 pb-4">Plataforma de Innovación Industrial</h1>
-
+  
     <!-- Sección de introducción -->
     <section class="mb-16">
       <p class="text-xl leading-relaxed text-gray-800">
         "Nuevo Los Lagos" representa una alianza estratégica entre la Universidad Santo Tomás, Asimet y Grupo Centinela, 
         respaldada por Corfo Los Lagos. Nuestra misión es transformar el panorama industrial regional mediante tecnología 
         e innovación.
-      </p>
+      </p>  <img
+      src="assets/plataforma0.jpg"
+      alt="Desafíos y Brechas img Descripción"
+    
+    />
       
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
         <div class="bg-amber-500/10 p-8 hover:bg-amber-500/20 transition-all">
@@ -59,9 +63,9 @@
     </section>
 
     <img
-      src="assets/image1.svg"
+      src="assets/plataforma1.jpg"
       alt="Desafíos y Brechas img Descripción"
-      class="w-2/3"
+    
     />
     <section class="my-8 text-justify bg-gray-100 p-3">
       <h2 class="text-3xl font-semibold text-gray-800">Desafíos y Brechas</h2>
@@ -81,7 +85,7 @@
       </ul>
     </section>
     <img
-      src="assets/componentesnllgs.svg"
+      src="assets/plataforma2.jpg"
       alt="Descripción manufactura avanzada"
       class="w-full object-cover mb-16"
     />
