--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -133,7 +133,7 @@
           [disabled]="
             modeloMadurez() && modeloMadurez()?.respuestas_proveedor !== null
           "
-          (click)="modeloMadurezService.openLinkFormacion()"
+          (click)="modeloMadurezService.openLinkProveedores()"
           class="my-1 w-full gap-2 border border-blue-700 p-8 bg-white-700 flex text-blue-700"
         >
           <strong>Encuesta de Proveedores</strong>
