Fix typo in evaluaciones-startup component HTML

--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -19,7 +19,7 @@
             Completa modelo de formación de emprendedores
           </h2>
           <p class="text-gray-500 mb-6">
-            Actualmente, tu Modelo de formación de emprendedores no ha sido
+            Actualmente tu Modelo de formación de emprendedores no ha sido
             completado. Te invitamos a contestar este modelo y a conocer las
             acciones necesarias para alcanzar la madurez tecnológica. Para
             completar el modelo y acceder a todas sus funcionalidades.
